2008-02-20  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh: (CygbuildVersionInfo): Fix small error
	in version detection: foo1.2b was interpreted as [foo 1.2], not
	[foo 1.2b].
	(CygbuildMakefileName): Add few more guesses for the makefile.
	(CygbuildMakefilePrefixIsStandard): Reduce guessed to $@ and *.mk.
	Add error checking for empty files.
	(CygbuildMakefileRunInstall): Send makefile name to
	`CygbuildMakefilePrefixCheck' and `CygbuildMakefilePrefixIsStandard'.
	(CygbuildMakefilePrefixCheck): Add input arg MAKEFILE and throw away
	Makefile name guessing code.
	(CygbuildCmdMkpatchMain): Check unpatch failure.
	(CygbuildDefineGlobalCompile): Remove C++ autodetections.
	(CygbuildPatchPrefixStripCountFromFilename): Return error code.
	(CygbuildPatchPrefixStripCountFromContent): Return error code.
	Improve -p1 detection.
	(CygbuildMatchRemoveWord): New.
	(CygbuildBootVariablesGlobalMain): Remove --binary from CYGBUILD_PATCH_OPT,
	Under Cygwin it is legal only if destination file has CRLF.
	(CygbuildPatchApplyRun): Use `CygbuildFileIsCRLF' to set patch
	option --binary
	(CygbuildFileIsCRLF): Check that FILE exists.
	(CygbuildCmdInstallPatchVerify): New
	(CygbuildCmdInstallMain): Use `CygbuildCmdInstallPatchVerify'
	(CygbuildMsgFilter): Show patch patch in different color.

2008-02-19  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh: (CygbuildCmdReadmeRemoveFileSection): Remove
	awk edit. Moved to perl library.
	(CygbuildBootVariablesGlobalMain): Add --binary to CYGBUILD_PATCH_OPT.
	(CygbuildPatchApplyMaybe): Fix problem with `unpatch' where not
	all files ere patched.
	(CygbuildBootVariablesGlobalMain): Remove
	`cygbuild_opt_exclude_cygbuild'.
	(CygbuildCmdPkgSourceCvsMain): Remove.
	(CygbuildCmdPkgSourceMain): Remove version contol handling.
	(CygbuildCommandMain): Remove --checkout option.
	(CygbuildCmdPkgSourceCvsdiff): Remove.
	(CygbuildBootVariablesGlobalMain): Remove CYGBUILD_CVSDIFF_OPTIONS.
	Move CYGBUILD_DIFF_OPTIONS opions to new variable