@@ -1,3 +1,8 @@
+2008-02-21  Jari Aalto  <jari.aalto@cante.net>
+
+	* bin/cygbuild.sh (top level): Remove old BASH test and change
+	to more reliable process substitution test.
+
 2008-02-20  Jari Aalto  <jari.aalto@cante.net>
 
 	* bin/cygbuild.sh: (CygbuildVersionInfo): Fix small error
